TestCases/Errors/Haversine/observations/sst/aut_11_obs.spm
obs r15-c5 7.98977309044423e-05
obs r16-c5 0.000159482745635398
obs r17-c5 0.000243892593591218
obs r15-c6 0.000149786705798749
obs r16-c6 0.000182113352711353
obs r17-c6 0.000201948051650347
obs r10-c10 0.00233766233766234
obs r10-c11 0.00303030303030303
obs r7-c12 0.00717171717171717
obs r7-c13 0.00545454545454545
obs r8-c13 0.0109090909090909
obs r7-c14 0.006
obs r8-c14 0.00754545454545455
obs r9-c14 0.0142857142857143
obs r7-c16 1e-08
obs r7-c17 0.000948051948051948
obs r9-c19 0.0169090909090909
obs r10-c19 0.0929675819984744
obs r11-c19 0.0444407546644389
obs r9-c20 0.0185177865612648
obs r10-c20 0.0445176667864415
obs r11-c20 0.0306363636363636
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r17-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r10-c10 0.2
error_value r10-c11 0.2
error_value r7-c12 0.2
error_value r7-c13 0.2
error_value r8-c13 0.2
error_value r7-c14 0.2
error_value r8-c14 0.2
error_value r9-c14 0.2
error_value r7-c16 0.2
error_value r7-c17 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
